--- a/src/app/calories/components/progress-bar/progress-bar.component.css
+++ b/src/app/calories/components/progress-bar/progress-bar.component.css
@@ -1,8 +1,4 @@
 .p-progressbar-value{
   max-width:100%;
-  width: auto !important;
-}
-
-.p-progressbar-value span {
-  margin: 0 4px;
+  min-width:12%;
 }
