--- a/src/app/calories/components/food-info/food-info.component.css
+++ b/src/app/calories/components/food-info/food-info.component.css
@@ -4,3 +4,17 @@
 .p-card {
   overflow: auto;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--surface-50);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--surface-300);
+  border-radius: 10px;
+}
