--- a/src/app/diabetes/components/food-info-diabetes/food-info-diabetes.component.css
+++ b/src/app/diabetes/components/food-info-diabetes/food-info-diabetes.component.css
@@ -1,3 +1,18 @@
 .p-card {
   overflow: auto;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--surface-50);
+
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--surface-300);
+  border-radius: 10px;
+}
