add modify profile errors and change register image

--- a/src/app/modify-profile/pages/modify-profile/modify-profile.component.html
+++ b/src/app/modify-profile/pages/modify-profile/modify-profile.component.html
@@ -3,7 +3,7 @@
     <div class="field flex align-items-center justify-content-center">
       <h2 class="font-light mr-3">Modifica tus datos</h2> <i class="pi pi-user" style="font-size: 1.5rem"></i>
     </div>
-    <form [formGroup]="modifyUserForm" (submit)="modifyProperties()" class="flex flex-wrap justify-content-between gap-4 w-8 m-auto ">
+    <form [formGroup]="modifyUserForm" (submit)="modifyProperties()" class="flex flex-wrap justify-content-between gap-0 md:gap-4 w-8 m-auto ">
       <div class="sm:w-full md:w-auto">
         <div class="field">
           <div class="mb-3">
@@ -11,12 +11,19 @@
           </div>
           <input formControlName="username" pInputText id="username" type="text" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('username')">
+          {{getFieldError('username')}}
+        </span>
         <div class="field">
           <div class="mb-3">
             <label for="password">Contraseña</label>
           </div>
           <p-password formControlName="password" id="password" [toggleMask]="true" [feedback]="false" class="w-full"></p-password>
+
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('password')">
+          {{getFieldError('password')}}
+        </span>
       </div>
 
       <div class="sm:w-full md:w-auto">
@@ -26,12 +33,18 @@
           </div>
           <input formControlName="name" pInputText id="name" type="text" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('name')">
+          {{getFieldError('name')}}
+        </span>
         <div class="field">
           <div class="mb-3">
             <label for="lastname">Apellido</label>
           </div>
           <input formControlName="lastname" pInputText id="lastname" type="text" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('lastname')">
+          {{getFieldError('lastname')}}
+        </span>
       </div>
       <div class="sm:w-full md:w-auto">
         <div class="field">
@@ -40,6 +53,9 @@
           </div>
           <input formControlName="email" pInputText id="email" type="email" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('email')">
+          {{getFieldError('email')}}
+        </span>
         <div class="field">
           <div class="mb-3">
             <label for="gender">Género</label>
@@ -51,6 +67,9 @@
             optionLabel="name"
             placeholder="Introduce tu género" />
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('gender')">
+          {{getFieldError('gender')}}
+        </span>
       </div>
       <div class="sm:w-full md:w-auto">
         <div class="field">
@@ -59,12 +78,18 @@
           </div>
           <input formControlName="age" pInputText id="age" type="number" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('age')">
+          {{getFieldError('age')}}
+        </span>
         <div class="field">
           <div class="mb-3">
             <label for="height">Altura</label>
           </div>
           <input formControlName="height" pInputText id="height" type="number" step="0.01" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('height')">
+          {{getFieldError('height')}}
+        </span>
       </div>
       <div class="sm:w-full md:w-auto">
         <div class="field">
@@ -73,6 +98,9 @@
           </div>
           <input formControlName="weight" pInputText id="weight" type="number" step="0.01" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('weight')">
+          {{getFieldError('weight')}}
+        </span>
         <div class="field">
           <div class="mb-3">
             <label for="activityFactor">Factor de Actividad</label>
@@ -92,12 +120,18 @@
           </div>
           <input formControlName="insulinaFactor" pInputText id="insulinaFactor" type="number" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('insulinaFactor')">
+          {{getFieldError('insulinaFactor')}}
+        </span>
         <div class="field">
           <div class="mb-3">
             <label for="ICR">ICR</label>
           </div>
           <input formControlName="icr" pInputText id="ICR" type="number" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
         </div>
+        <span class="p-error mb-4 inline-block" *ngIf="isValidField('icr')">
+          {{getFieldError('icr')}}
+        </span>
 
       </div>
       <div class="sm:w-full md:w-auto">
