--- a/src/app/register/pages/register-page/register-page.component.html
+++ b/src/app/register/pages/register-page/register-page.component.html
@@ -1,7 +1,7 @@
 <main class="flex">
   <div class="hidden md:flex flex-1 justify-content-center align-items-center p-7 max-h-full w-6">
     <div class="w-6 h-full">
-      <img src="login/login-image.jpg" alt="" class="decorator-img w-full h-full border-round-2xl">
+      <img src="register/register-image.jpg" alt="" class="decorator-img w-full h-full border-round-2xl">
     </div>
   </div>
   <div class="flex flex-column flex-1 justify-content-center">
