fix icr description

--- a/src/app/register/components/actividad-form/actividad-form.component.html
+++ b/src/app/register/components/actividad-form/actividad-form.component.html
@@ -95,8 +95,8 @@
         [maxFractionDigits]="2"
       />
       <small id="icr-help">
-        El ICR es la cantidad de carbohidratos (en gramos) que una unidad de insulina cubre.
-        Por ejemplo: Si consumes 60 g de pan, y te administras 1.5 unidades de insulina, entonces tu ICR sería: 60 ÷ 1.5 = 40 g/u.
+        El ICR es la cantidad de carbohidratos (en gramos) que cubre una unidad de insulina.
+        Por ejemplo: Si consumes 40 g de carbohidratos y te administras 1 unidad de insulina, tu ICR sería 40 g/u. Este valor se usará para calcular las porciones de insulina necesarias para cualquier alimento que consumas.
         Puedes cambiar este valor si es necesario en tu perfil de usuario.
       </small>
     </div>
