feat(Performance) Font download and new format to images

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -8,16 +8,16 @@
     </div>
     <div class="flex justify-content-center sm:justify-content-end gap-3 flex-1">
       <a href="https://www.linkedin.com/in/oscarvelasco1/">
-        <p-avatar image="footer/linkedin.png"></p-avatar>
+        <p-avatar image="footer/linkedin.webp"></p-avatar>
       </a>
       <a href="https://www.instagram.com">
-        <p-avatar image="footer/instagram.png"></p-avatar>
+        <p-avatar image="footer/instagram.webp"></p-avatar>
       </a>
       <a href="https://www.youtube.com">
-        <p-avatar image="footer/youtube.png"></p-avatar>
+        <p-avatar image="footer/youtube.webp"></p-avatar>
       </a>
       <a href="https://www.whatsapp.com">
-        <p-avatar image="footer/whatsapp.png"></p-avatar>
+        <p-avatar image="footer/whatsapp.webp"></p-avatar>
       </a>
     </div>
   </div>
