--- a/src/app/modify-profile/pages/modify-profile/modify-profile.component.html
+++ b/src/app/modify-profile/pages/modify-profile/modify-profile.component.html
@@ -1,10 +1,10 @@
 <main class="flex-1 mb-4 pl-2 pr-2 h-full ">
   <div class="field-container flex flex-column h-full">
     <div class="field flex align-items-center justify-content-center">
-      <h2 class="font-light mr-3">Modifica tus datos</h2> <i class="pi pi-user" style="font-size: 1.5rem"></i>
+      <h1 class="font-light mr-3">Modifica tus datos</h1> <i class="pi pi-user" style="font-size: 1.5rem"></i>
     </div>
     <form [formGroup]="modifyUserForm" (submit)="modifyProperties()" class="flex flex-wrap justify-content-between gap-0 md:gap-4 w-8 m-auto ">
-      <div class="sm:w-full md:w-auto">
+      <div class="w-full md:w-auto">
         <div class="field">
           <div class="mb-3">
             <label for="username">Usuario</label>
@@ -26,7 +26,7 @@
         </span>
       </div>
 
-      <div class="sm:w-full md:w-auto">
+      <div class="w-full md:w-auto">
         <div class="field">
           <div class="mb-3">
             <label for="name">Nombre</label>
@@ -46,7 +46,7 @@
           {{getFieldError('lastname')}}
         </span>
       </div>
-      <div class="sm:w-full md:w-auto">
+      <div class="w-full md:w-auto">
         <div class="field">
           <div class="mb-3">
             <label for="email">Correo Electrónico</label>
@@ -61,6 +61,7 @@
             <label for="gender">Género</label>
           </div>
           <p-dropdown
+            class="w-full md:w-auto"
             formControlName="gender"
             id="gender"
             [options]="genderOptions"
@@ -71,12 +72,20 @@
           {{getFieldError('gender')}}
         </span>
       </div>
-      <div class="sm:w-full md:w-auto">
+      <div class="w-full md:w-auto">
         <div class="field">
           <div class="mb-3">
             <label for="age">Edad</label>
           </div>
+<!--
           <input formControlName="age" pInputText id="age" type="number" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+-->
+          <p-inputNumber
+            formControlName="age"
+            styleClass="w-full"
+            id="age"
+            [max]="100"
+          />
         </div>
         <span class="p-error mb-4 inline-block" *ngIf="isValidField('age')">
           {{getFieldError('age')}}
@@ -85,18 +94,36 @@
           <div class="mb-3">
             <label for="height">Altura</label>
           </div>
+<!--
           <input formControlName="height" pInputText id="height" type="number" step="0.01" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+-->
+          <p-inputNumber
+            formControlName="height"
+            styleClass="w-full"
+            id="height"
+            [max]="250"
+          />
         </div>
         <span class="p-error mb-4 inline-block" *ngIf="isValidField('height')">
           {{getFieldError('height')}}
         </span>
       </div>
-      <div class="sm:w-full md:w-auto">
+      <div class="w-full md:w-auto">
         <div class="field">
           <div class="mb-3">
             <label for="weight">Peso</label>
           </div>
+<!--
           <input formControlName="weight" pInputText id="weight" type="number" step="0.01" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+-->
+          <p-inputNumber
+            formControlName="weight"
+            styleClass="w-full"
+            id="weight"
+            mode="decimal"
+            [maxFractionDigits]="1"
+            [max]="500"
+          />
         </div>
         <span class="p-error mb-4 inline-block" *ngIf="isValidField('weight')">
           {{getFieldError('weight')}}
@@ -113,12 +140,22 @@
             placeholder="Selecciona un factor de actividad" />
         </div>
       </div>
-      <div class="sm:w-full md:w-auto">
+      <div class="w-full md:w-auto">
         <div class="field">
           <div class="mb-3">
-            <label for="insulinaFactor">Factor de Insulina</label>
+            <label for="insulinaFactor">Factor de resistencia a la Insulina</label>
           </div>
+<!--
           <input formControlName="insulinaFactor" pInputText id="insulinaFactor" type="number" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+-->
+          <p-inputNumber
+            formControlName="insulinaFactor"
+            styleClass="w-full"
+            id="insulinaFactor"
+            name="factorDiabetes"
+            mode="decimal"
+            [maxFractionDigits]="2"
+          />
         </div>
         <span class="p-error mb-4 inline-block" *ngIf="isValidField('insulinaFactor')">
           {{getFieldError('insulinaFactor')}}
@@ -127,14 +164,24 @@
           <div class="mb-3">
             <label for="ICR">ICR</label>
           </div>
+<!--
           <input formControlName="icr" pInputText id="ICR" type="number" class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
+-->
+          <p-inputNumber
+            formControlName="icr"
+            styleClass="w-full"
+            id="icr"
+            name="icr"
+            mode="decimal"
+            [maxFractionDigits]="2"
+          />
         </div>
         <span class="p-error mb-4 inline-block" *ngIf="isValidField('icr')">
           {{getFieldError('icr')}}
         </span>
 
       </div>
-      <div class="sm:w-full md:w-auto">
+      <div class="w-full md:w-auto">
         <div class="field">
           <div class="mb-3">
             <label for="objective">Objetivo</label>
