--- a/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
+++ b/src/app/diabetes/components/search-food-diabetes/search-food-diabetes.component.html
@@ -48,7 +48,7 @@
                       </div>
                     </div>
                     <div class="flex flex-column gap-2 flex-1" >
-                      <span class="text-center">Raciones</span>
+                      <span class="text-center">Unidades</span>
                       <div [style]="{'background-color': fatColor}" class="border-round flex justify-content-center">
                         <!--<span class="text-white">{{ calculatePortions(food.carbohydrate) }}</span>-->
                         <span class="text-white">{{calculatePortions(food.carbohydrate)}}</span>
@@ -83,7 +83,7 @@
                     </div>
                   </div>
                   <div class="flex flex-column gap-2 flex-1" >
-                    <span class="text-center">Raciones</span>
+                    <span class="text-center">Unidades</span>
                     <div [style]="{'background-color': fatColor}" class="border-round flex justify-content-center">
                       <!--<span class="text-white">{{ foodAdded.portions }}</span>-->
                       <span class="text-white">{{foodAdded.portions}}</span>
