--- a/src/app/register/pages/register-page/register-page.component.css
+++ b/src/app/register/pages/register-page/register-page.component.css
@@ -23,12 +23,12 @@ main{
 .p-menuitem-link{
   background:none;
 }
-
-@media screen and (min-width: 1024px) {
-  main{
-  height:calc(100vh - 253px)
+.height{
+  @media screen and (min-width: 1024px) {
+    height:calc(100vh - 253px)
   }
 }
+
 :host {
   flex: 1 1 0;
 }
