--- a/src/app/login/pages/login-page/login-page.component.css
+++ b/src/app/login/pages/login-page/login-page.component.css
@@ -2,9 +2,20 @@
     object-fit: cover;
 }
 main{
+  margin-top:140px;
+}
+@media screen and (min-width: 700px) {
+  main{
+    margin-top:70px;
+  }
+}
+@media screen and (min-width: 1500px) {
+  main{
     margin-top:70px;
     height: calc(100vh - 350px);
+  }
 }
+
 :host {
   flex: 1 1 0;
 }
