--- a/src/app/login/pages/login-page/login-page.component.html
+++ b/src/app/login/pages/login-page/login-page.component.html
@@ -1,4 +1,4 @@
-<main class="flex md:min-h-full">
+<main class="flex">
   <div class="hidden md:flex flex-1 justify-content-center align-items-center p-7 max-h-full w-6">
     <div class="w-6">
       <img src="login/login-image.jpg" alt="" class="decorator-img w-full h-full border-round-2xl">
