--- a/src/app/register/pages/register-page/register-page.component.css
+++ b/src/app/register/pages/register-page/register-page.component.css
@@ -1,5 +1,6 @@
 main{
   margin-top:140px;
+  min-height:calc(100vh - 253px);
 }
 
 .p-steps-title{
@@ -22,19 +23,6 @@ main{
 
 .p-menuitem-link{
   background:none;
-}
-.height{
-  @media screen and (min-width: 1500px) {
-    margin-top:140px;
-    height:calc(100vh - 253px)
-  }
-}
-
-@media screen and (min-width: 700px) {
-  main{
-    height:100%;
-    margin-top:140px;
-  }
 }
 
 :host {
