--- a/src/app/diabetes/pages/diabetes-page/diabetes-page.component.html
+++ b/src/app/diabetes/pages/diabetes-page/diabetes-page.component.html
@@ -1,6 +1,6 @@
 <main class="mr-3 ml-3 md:mr-8 md:ml-8">
 
-  <div class="flex align-items-center justify-content-center mb-5 gap-7 flex-wrap">
+  <div class="flex align-items-center justify-content-center mb-5 gap-7 flex-wrap md:flex-nowrap">
     <div >
       <calories-calendar></calories-calendar>
     </div>
