--- a/src/app/calories/pages/calories-page/calories-page.component.html
+++ b/src/app/calories/pages/calories-page/calories-page.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-column gap-4 mb-4 md:flex-row">
     <p>¡Hola, {{localStorage.getItem("userLogged")}}! segun los datos de tu perfil, tu Tasa Metabolica Basal es de : <b>{{userTmb}} kcal</b>. Actualmente tu objetivo es:
       <b>{{userObjectiveName}}</b>, por lo tanto, las calorias que has de consumir son: <b>{{dailyCalories}} kcal.</b> </p>
-    <form class="flex gap-4" (submit)="saveUserObjective()" [formGroup]="userObjectiveForm" *ngIf="userWantsModifyObjective">
+    <form class="flex gap-4 flex-wrap justify-content-center md:flex-nowrap md:justify-content-start" (submit)="saveUserObjective()" [formGroup]="userObjectiveForm" *ngIf="userWantsModifyObjective">
 
         <p-dropdown
           formControlName="objective"
