fix modify user password error css

--- a/src/app/modify-profile/pages/modify-profile/modify-profile.component.html
+++ b/src/app/modify-profile/pages/modify-profile/modify-profile.component.html
@@ -4,7 +4,7 @@
       <h1 class="font-light mr-3">Modifica tus datos</h1> <i class="pi pi-user" style="font-size: 1.5rem"></i>
     </div>
     <form [formGroup]="modifyUserForm" (submit)="modifyProperties()" class="flex flex-wrap gap-0 md:gap-4 w-8 m-auto ">
-      <div class="w-full md:w-auto">
+      <div class="w-full md:w-auto flex-1">
         <div class="field">
           <div class="mb-3">
             <label for="username">Usuario</label>
